Remove commented out code and fix spacing

--- a/src/Styles/Card.scss
+++ b/src/Styles/Card.scss
@@ -35,7 +35,7 @@ p {
 }
 
 .title {
-  font-size: 1.5vw;
+  font-size: 1.4vw;
   text-decoration: none;
 }
 
